# genaifdp-july-2025

classes/: 23-july-2025.txt  24-july-2025.txt  gift.txt
miniproject/: 10-rag.py  1_contextual_chatbot.py  2_Receipe_generator.py  3_Email_generator.py  4_Real_Time_Audio_Transcribe.py  5_Image_Generator.py  6_Data_Analysis.py  7_Personalized_marketing_campaign.py  8_Video_Script_Generator.py  9_Code_Refactoring.py  code_refactor_raw.txt  customer_data.csv  requirements.txt
presentation/: 1-Generative_AI_for_Modern_Educators.pptx  3-Transformers.pptx  4-Transformer_Models.pptx  reference.txt
programs/aiagents/basic/: 1-simpleagent.py  2-StockPrice.py  4-multiagents.py
programs/crewaidemo/myfirstcrewai/: README.md  pyproject.toml  report.md
programs/crewaidemo/myfirstcrewai/src/myfirstcrewai/: crew.py  main.py
