[project]
name = "myfirstcrewai"
version = "0.1.0"
description = "myfirstcrewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
myfirstcrewai = "myfirstcrewai.main:run"
run_crew = "myfirstcrewai.main:run"
train = "myfirstcrewai.main:train"
replay = "myfirstcrewai.main:replay"
test = "myfirstcrewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
